java script enter key feature

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,8 +34,8 @@
       <button
         class="navbar-toggler"
         type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
         aria-controls="navbarNav"
         aria-expanded="false"
         aria-label="Toggle navigation"
@@ -43,7 +43,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div
-        class="collapse navbar-collapse justify-content-end text-right ml-auto"
+        class="collapse navbar-collapse text-right ml-auto"
         id="navbarNav"
       >
         <ul class="navbar-nav">
@@ -67,6 +67,5 @@
       </div>
     </header>
     {% endif %} {% block content %} {% endblock %}
-    
   </body>
 </html>
