--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -48,7 +48,7 @@ content %}
     </a>
 </div>
 <div class="container-chatbox">
-    <div class="message-box">
+    <div class="message-box" id="message-box">
         <div class="messages" id="messages">
             <!-- Messages will go here -->
         </div>
@@ -81,6 +81,7 @@ content %}
         </div>
         `;
         messages.innerHTML += content;
+        autoScroll();
     };
 
     socket.on("message", (data) => {
@@ -110,6 +111,14 @@ content %}
                 sendMessage();
             }
         });
+
+    //for auto scroll when new messages are appended **doesnt work fix it**
+    function autoScroll() {
+        const messagebox = document.getElementById('message-box');
+        messagebox.scrollTop = messagebox.scrollHeight;
+}
+
+
 </script>
 
 {% endif %}
