--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,7 +30,8 @@
 
   <body>
     <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="/"><img src="/static/logo.png" /></a>
+      <!-- <a class="navbar-brand" href="/"><img src="/static/logo.png" /></a>-->
+      <h2 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">NE.T</h2>
       <button
         class="navbar-toggler"
         type="button"
@@ -43,7 +44,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div
-        class="collapse navbar-collapse text-right ml-auto"
+        class="collapse navbar-collapse justify-content-end text-right ml-auto"
         id="navbarNav"
       >
         <ul class="navbar-nav">
