--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,8 +30,8 @@
 
   <body>
     <nav class="navbar navbar-expand-lg">
-      <!-- <a class="navbar-brand" href="/"><img src="/static/logo.png" /></a>-->
-      <h2 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">NE.T</h2>
+      <a class="navbar-brand" href="/"><img src="/static/logo.png" /></a>
+      <h2 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;"></h2>
       <button
         class="navbar-toggler"
         type="button"
